syntax = "proto3";

option java_multiple_files = true;
option java_package = "module5";
option java_outer_classname = "AuthServiceProto";
option objc_class_prefix = "RTG";

package grpc;

service AuthServiceAPI{
  rpc IsAuth(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest{
  string token = 1;
}

message AuthResponse {
  int32 status = 1;
}